# traversal

./: .gitignore  CMakeLists.txt  README.md  TraversalConfig.cmake  TraversalConfig.cmake.in  benchmark.conf  benchmark.py  generate_ao_images.sh  generate_tables.py
distribs/: list.txt
hagrid/: CMakeLists.txt
hagrid/src/: CMakeLists.txt  bbox.h  common.h  float3.h  grid.h  grid.impala  main.cpp  tribox.c
src/: CMakeLists.txt  fmin_max.nvvm  patch.txt
src/accel/: bvh.impala
src/common/: debug.impala  float.impala  instancing.impala  intersection.impala  range.impala  stack.impala  transform.impala  transparency.impala  traversal.impala  vector.impala
src/frontend/: bvh_file.h  bvh_file_info.hpp  bvh_format.h  interface.h  load_bvh.cpp  load_mbvh.cpp  load_mesh.cpp  load_rays.cpp  loaders.h  main.cpp  options.h  traversal.h
src/mappings/: intrinsics_amdgpu.impala  intrinsics_nvvm.impala  mapping_cpu.impala  mapping_gpu.impala  mapping_packet.impala  mapping_packet_auto.impala  mapping_rv.impala  mapping_wfv.impala
src/tools/: camera.h  fbuf2png.cpp  fbufdiff.cpp  gen_primary.cpp  gen_random.cpp  gen_shadow.cpp  genprimary.cpp  linear.h  viewer.cpp
src/vectorize/: scalar.impala  vectorize16.impala  vectorize4.impala  vectorize8.impala
tools/: tools.cabal
tools/FBufToPng/: FBufToPng.hs
tools/GenPrimary/: GenPrimary.hs
tools/GenRandom/: GenRandom.hs
tools/GenShadow/: GenShadow.hs
